--- a/HTML5/SiteThatShallNotBeNamedYet/SiteThatShallNotBeNamedYet/Views/Home/Index.cshtml
+++ b/HTML5/SiteThatShallNotBeNamedYet/SiteThatShallNotBeNamedYet/Views/Home/Index.cshtml
@@ -1,78 +1,79 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@*<!doctype html>
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Odell's Project</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="StyleSheet.css" />
-    <style>
-        body {
-            background-color: lightgrey;
-        }
-    </style>
-</head>
-<body>
-    <div class="row">
-        <div class=" col-md-1">
-            <h4 style="color:deepskyblue">Placeholder</h4>
-
-        </div>
-
-        <div class=" col-md-9">
-            <nav>
-                <a href="/References/">Refs</a> |
-                <a href="/Settings/">Settings/Profile</a> |
-                <a href="/AboutUs/">AboutUs</a> |
-
-            </nav>
-        </div>
-
-        <div class="img-wrapper">
-            <img class="img-responsive" src="https://i7.uihere.com/icons/156/533/242/instagram-person-profile-user-icon-5e69ea55c8a4fc657fa8244079a2d145.png" alt="Profile Page" />
-            <div class="img-overlay">
-
-                <button type="button" class="btn btn-primary">Login</button>
-                <button type="button" class="btn btn-secondary">Register</button>
+        <meta charset="utf-8" />
+        <title>odell's project</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-jckb8q3iqj61gnv9kgb8thssnjpsl0n8parn9huzonixn0hop+vmmdgmn5t9uj0z" crossorigin="anonymous">
+        <link rel="stylesheet" href="stylesheet.css" />
+        <style>
+            body {
+                background-color: lightgrey;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="row">
+            <div class=" col-md-1">
+                <h4 style="color:deepskyblue">placeholder</h4>
 
             </div>
+
+            <div class=" col-md-9">
+                <nav>
+                    <a href="/references/">refs</a> |
+                    <a href="/settings/">settings/profile</a> |
+                    <a href="/aboutus/">aboutus</a> |
+
+                </nav>
+            </div>
+
+            <div class="img-wrapper">
+                <img class="img-responsive" src="https://i7.uihere.com/icons/156/533/242/instagram-person-profile-user-icon-5e69ea55c8a4fc657fa8244079a2d145.png" alt="profile page" />
+                <div class="img-overlay">
+
+                    <button type="button" class="btn btn-primary">login</button>
+                    <button type="button" class="btn btn-secondary">register</button>
+
+                </div>
+            </div>
+
         </div>
 
-    </div>
+        <header>
+            <h1>general questions</h1>
+            <div class="topnav">
+                <input type="text" placeholder="search..." name="search" />
 
+            </div>
 
+        </header>
 
-    <header>
-        <h1>General Questions</h1>
-        <div class="topnav">
-            <input type="text" placeholder="Search..." name="search" />
+        <section>
+            <h1 class="home" id="forums">
+                home>forums
+            </h1>
+
+        </section>
+
+        <div class="w3-sidebar w3-bar-block w3-card" style="width:25%;right:0;">
+            <h3 class="w3-bar-item">menu</h3>
+            <a href="https://www.marines.mil/" class="w3-bar-item w3-button">united states marine corps</a>
+            <a href="https://www.army.mil/" class="w3-bar-item w3-button">united states army</a>
+            <a href="https://www.navy.mil/" class="w3-bar-item w3-button">united states navy</a>
+            <a href="https://www.uscg.mil/" class="w3-bar-item w3-button">united states coast guard</a>
+            <a href="https://www.spaceforce.mil/" class="w3-bar-item w3-button">united states space force</a>
 
         </div>
 
-    </header>
-
-    <section>
-        <h1 class="Home" id="Forums">
-            Home>Forums
-        </h1>
-
-    </section>
-
-    <div class="w3-sidebar w3-bar-block w3-card" style="width:25%;right:0;">
-        <h3 class="w3-bar-item">Menu</h3>
-        <a href="https://www.marines.mil/" class="w3-bar-item w3-button">United States Marine Corps</a>
-        <a href="https://www.army.mil/" class="w3-bar-item w3-button">United States Army</a>
-        <a href="https://www.navy.mil/" class="w3-bar-item w3-button">United States Navy</a>
-        <a href="https://www.uscg.mil/" class="w3-bar-item w3-button">United States Coast Guard</a>
-        <a href="https://www.spaceforce.mil/" class="w3-bar-item w3-button">United States Space Force</a>
-
-    </div>
-
-    <div style="margin-right:25%">
+        <div style="margin-right:25%">
 
     </div>
 
 
 
 </body>
-</html>
+</html>*@
